trunk/Archive2/ab/caaaffd64d7b24/output
main.cpp:6:10: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto x: vec) {
         ^
main.cpp:6:16: error: range-based for loop is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto x: vec) {
               ^
main.cpp:17:5: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    auto it = vec.begin();
    ^
main.cpp:34:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
4 errors generated.
